[package]
name = "mix-n-mech"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
authors = ["Idan Arye <idanarye@gmail.com>"]

[dependencies]
bevy = "0.8"
bevy-yoleck = { version = "0.3.0", features = ["vpeol_2d"] }
bevy_egui = "0.15.1"
clap = { version = "3.2.17", features = ["derive"] }
serde = "1.0.143"
