[package]
name = "mix-n-mech"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
authors = ["Idan Arye <idanarye@gmail.com>"]

[dependencies]
bevy = "0.8"
bevy-yoleck = { version = "0.3.0", features = ["vpeol_2d"] }
bevy_asset_loader = { version = "0.12.1", features = ["2d"] }
bevy_egui = "0.15.1"
bevy_pkv = "0.5.0"
bevy_rapier2d = "0.16.1"
clap = { version = "3.2.17", features = ["derive"] }
serde = "1.0.143"
float-ord = "0.3.2"
leafwing-input-manager = "0.5.1"
bevy-egui-kbgp = "0.7.0"

[patch.crates-io]
wgpu = { git = "https://github.com/mockersf/wgpu/", branch = "unconditional-clear-workaround" }
